:art: Fix text centering on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -721,7 +721,7 @@ input, select, textarea {
                 text-align: center;
             }
 
-                ul {
+                .spotlight ul {
                     text-align: left;
                 }
 
